# tp-homework

./: Army.cpp  Army.h  CMakeLists.txt  Chain.cpp  Chain.h  Command.h  CreateUnitCommand.cpp  CreateUnitCommand.h  EnemyPlayer.cpp  EnemyPlayer.h  Factory.cpp  Factory.h  Game.cpp  Game.h  HumanFactory.cpp  HumanFactory.h  HumanPeaceful.cpp  HumanPeaceful.h  HumanSoldier.cpp  HumanSoldier.h  HumanWizard.cpp  HumanWizard.h  MagicSquad.cpp  MagicSquad.h  Peaceful.h  Player.cpp  Player.h  Population.cpp  Population.h  Process.cpp  Process.h  README.md  SabotageCommand.cpp  SabotageCommand.h  Soldier.h  UfosFactory.cpp  UfosFactory.h  UfosPeaceful.cpp  UfosPeaceful.h  UfosSoldier.cpp  (+9 more)
